samples/_failures_safe/1761151239_f73f90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d981998.c: In function ‘main’:
./samples/SAFE/__tmp_8d981998.c:172:5: error: expected expression at end of input
  172 |     if (len >
      |     ^~
./samples/SAFE/__tmp_8d981998.c:172:5: error: expected declaration or statement at end of input
